Fix alignment issues sidebar-bottom

--- a/styles.css
+++ b/styles.css
@@ -96,4 +96,5 @@ button {
     border-radius: 6px;
     padding: 5px;
     margin-right: 20px;
+    width: 60%;
 }
